package banana.republic.board;


public class HexTile {
    // Placeholder 
}
