package banana.republic.card;


public enum CardType {
    KNIGHT,
    PROGRESS,
    VICTORY_POINT
}
