package banana.republic.card;

/**
 * Abstract development card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class DevelopmentCard implements ExperimentCard {
    // TODO: Implement
}
