package banana.republic.card;


public interface ExperimentCard {
    String getCardName();
    CardType getCardType();
}
