package banana.republic.card;

/**
 * Knight card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class KnightCard extends DevelopmentCard {
    // TODO: Implement
}
