package banana.republic.card;

/**
 * Monopoly progress card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class MonopolyCard extends ProgressCard {
    // TODO: Implement
}
