package banana.republic.card;

/**
 * Abstract progress card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class ProgressCard extends DevelopmentCard {
    // TODO: Implement
}
