package banana.republic.card;

/**
 * Road building progress card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class RoadBuildingCard extends ProgressCard {
    // TODO: Implement
}
