package banana.republic.card;

/**
 * Victory point development card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class VictoryPointCard extends DevelopmentCard {
    // TODO: Implement
}
