package banana.republic.card.special;

/**
 * Largest Army special card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public class LargestArmyCard extends SpecialCard {
    // TODO: Implement
}
