package banana.republic.card.special;

/**
 * Longest Road special card.
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public class LongestRoadCard extends SpecialCard {
    // TODO: Implement
}
