package banana.republic.card.special;

/**
 * Abstract special card (Longest Road / Largest Army).
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class SpecialCard {
    // TODO: Implement
}
