package banana.republic.player;


public enum SpecialCardType {
    LONGEST_ROAD,
    LARGEST_ARMY
}
