package banana.republic.timer;

/**
 * 90-second turn timer (multithreaded, non-blocking).
 * Refer to class-diagram/Module3_Cards_Robber_Timer.puml for full specification.
 */
public abstract class TurnTimer implements Runnable {
    // TODO: Implement
}
